--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
 
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "build" : "npm i",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
