--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,12 @@
 
 
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build" : "npm i",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+  }
+  
   
 
   "eslintConfig": {
